# warning_condenser

./: CMakeLists.txt  README.md  warning_condenser.cpp  warning_producer.cpp
warning_producer/: CMakeLists.txt  info.txt  warning_producer.cpp
